--- a/contents/basic/code/weather/app.json
+++ b/contents/basic/code/weather/app.json
@@ -5,7 +5,7 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#cbeefd",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle":"black"
   }
