--- a/contents/basic/code/weather/project.config.json
+++ b/contents/basic/code/weather/project.config.json
@@ -18,6 +18,8 @@
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
@@ -27,13 +29,24 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "dev list",
+					"pathName": "pages/list/list",
+					"scene": null
+				}
+			]
 		}
 	}
 }
