add: news project index page

--- a/contents/basic/code/news/app.json
+++ b/contents/basic/code/news/app.json
@@ -5,9 +5,9 @@
   ],
   "window": {
     "backgroundTextStyle": "dark",
-    "navigationBarBackgroundColor": "#cbeefd",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black",
+    "navigationBarBackgroundColor": "#54a2df",
+    "navigationBarTitleText": "快读·资讯",
+    "navigationBarTextStyle": "white",
     "enablePullDownRefresh": true
   },
   "sitemapLocation": "sitemap.json"
