--- a/contents/basic/code/news/project.config.json
+++ b/contents/basic/code/news/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.0",
-	"appid": "touristappid",
+	"appid": "wx6a99cc362487fed1",
 	"projectname": "news",
 	"debugOptions": {
 		"hidedInDevtools": []
