--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 # ignore AppId
-./contents/projects/code/shop/project.config.json
-./contents/projects/code/shop/server/config.js
+contents/projects/code/shop/project.config.json
+contents/projects/code/shop/server/config.js
