--- a/contents/projects/code/movie/client/app.json
+++ b/contents/projects/code/movie/client/app.json
@@ -19,7 +19,7 @@
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#ececee",
+    "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "电影",
     "navigationBarTextStyle": "black"
   }
