update: movie project edit comment => add comment

--- a/contents/projects/code/movie/client/app.json
+++ b/contents/projects/code/movie/client/app.json
@@ -6,7 +6,7 @@
     "pages/movie/detail/detail",
     "pages/comments/list/list",
     "pages/comments/detail/detail",
-    "pages/comments/edit/edit",
+    "pages/comments/add/add",
     "pages/comments/preview/preview",
 
     "pages/order/order",
