--- a/contents/projects/code/movie/client/app.json
+++ b/contents/projects/code/movie/client/app.json
@@ -21,6 +21,7 @@
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "电影",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "black",
+    "enablePullDownRefresh": true
   }
 }
