--- a/contents/projects/code/movie/client/app.json
+++ b/contents/projects/code/movie/client/app.json
@@ -7,14 +7,7 @@
     "pages/comments/list/list",
     "pages/comments/detail/detail",
     "pages/comments/add/add",
-    "pages/comments/preview/preview",
-
-    "pages/order/order",
-    "pages/trolley/trolley",
-    "pages/user/user",
-    "pages/detail/detail",
-    "pages/add-comment/add-comment",
-    "pages/comment/comment"
+    "pages/comments/preview/preview"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
