update: test audio component

--- a/contents/projects/code/movie/client/app.json
+++ b/contents/projects/code/movie/client/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/home/home",
+    "pages/test/test",
     "pages/my/my",
     "pages/movie/hot/hot",
     "pages/movie/detail/detail",
